infra/k8s/local/notifier-db.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notifier-mongo-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notifier-mongo
  template:
    metadata:
      labels:
        app: notifier-mongo
    spec:
      containers:
        - name: notifier-mongo
          image: mongo:6.0.5
---
apiVersion: v1
kind: Service
metadata:
  name: notifier-mongo-srv
spec:
  selector:
    app: notifier-mongo
  ports:
    - name: notifier-mongo
      protocol: TCP
      port: 27017
      targetPort: 27017
