infra/k8s/local/notifier-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notifier-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notifier
  template:
    metadata:
      labels:
        app: notifier
    spec:
      containers:
        - name: notifier
          image: notifier
          imagePullPolicy: IfNotPresent
---
apiVersion: v1
kind: Service
metadata:
  name: notifier-srv
spec:
  selector:
    app: notifier
  ports:
    - name: notifier
      port: 3000
      targetPort: 3000
