infra/k8s/local/scheduler-db.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scheduler-mongo-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: scheduler-mongo
  template:
    metadata:
      labels:
        app: scheduler-mongo
    spec:
      containers:
        - name: scheduler-mongo
          image: mongo:6.0.5
---
apiVersion: v1
kind: Service
metadata:
  name: scheduler-mongo-srv
spec:
  selector:
    app: scheduler-mongo
  ports:
    - name: scheduler-mongo
      protocol: TCP
      port: 27017
      targetPort: 27017
