infra/k8s/local/scheduler-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scheduler-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: scheduler
  template:
    metadata:
      labels:
        app: scheduler
    spec:
      containers:
        - name: scheduler
          image: scheduler
          imagePullPolicy: IfNotPresent
---
apiVersion: v1
kind: Service
metadata:
  name: scheduler-srv
spec:
  selector:
    app: scheduler
  ports:
    - name: scheduler
      port: 3000
      targetPort: 3000
