infra/k8s/local/ui-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ui
  template:
    metadata:
      labels:
        app: ui
    spec:
      containers:
        image: ui
        imagePullPolicy: IfNotPresent
---
apiVersion: v1
kind: Service
metadata:
  name: ui-srv
spec:
  selector:
    app: ui
  ports:
    - name: ui
      protocol: TCP
      port: 3000
      targetPort: 3000
