infra/k8s/local/uploader-db.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uploader-mongo-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: uploader-mongo
  template:
    metadata:
      labels:
        app: uploader-mongo
    spec:
      containers:
        - name: uploader-mongo
          image: mongo:6.0.5
---
apiVersion: v1
kind: Service
metadata:
  name: uploader-mongo-srv
spec:
  selector:
    app: uploader-mongo
  ports:
    - name: uploader-mongo
      protocol: TCP
      port: 27017
      targetPort: 27017
