infra/k8s/local/uploader-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uploader-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: uploader
  template:
    metadata:
      labels:
        app: uploader
    spec:
      containers:
        - name: uploader
          image: uploader
          imagePullPolicy: IfNotPresent
---
apiVersion: v1
kind: Service
metadata:
  name: uploader-srv
spec:
  selector:
    app: uploader
  ports:
    - name: uploader
      port: 3000
      targetPort: 3000
